<resources>
    <string name="app_name">Entertainment Tracker</string>

    <string name="action_settings">Settings</string>
    <string name="app_title">Entertainment Tracker</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search">Search</string>

    <string-array name="sort_by">
        <item>Sort by</item>
        <item>Title: A-Z</item>
        <item>Title: Z-A</item>
        <item>Highest Rated</item>
    </string-array>

    <string name="action">Action</string>
    <string name="comedy">Comedy</string>
    <string name="fiction">Fiction</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="books">Books</string>
    <string name="action_search">Search</string>
    <string name="title">Entertainment Title</string>
    <string name="description">Entertainment Description</string>
    <string name="avg_rating">Average Rating</string>
    <string name="user_rating">User Rating</string>


</resources>
