<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:padding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="260dp"
            android:layout_height="450dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="false"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/itemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemImage"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="44dp"
            android:padding="10dp"
            android:text="@string/description"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/itemImage"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"
            android:layout_toEndOf="@id/itemImage"
            android:text="@string/avg_rating" />

        <RatingBar
            android:id="@+id/avgRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:layout_alignStart="@id/textView"
            android:layout_below="@id/textView"
            android:layout_marginTop="11dp"
            android:numStars="5"
            android:stepSize="0.1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/avgRating"
            android:layout_below="@id/avgRating"
            android:layout_marginTop="45dp"
            android:text="@string/user_rating" />

        <RatingBar
            android:id="@+id/userRating"
            style="@style/Widget.AppCompat.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/textView2"
            android:layout_below="@id/textView2"
            android:layout_marginTop="17dp"
            android:stepSize="0.1" />
    </RelativeLayout>
</ScrollView>