<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="comp3350.entertainment_tracker.presentation.HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonMovies"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="@drawable/gradient"
                android:onClick="onClickToCatalog"
                android:text="@string/movies"
                android:textColor="@android:color/background_light" />

            <HorizontalScrollView
                android:id="@+id/movieScroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient">

                <LinearLayout
                    android:id="@+id/movieLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"/>
            </HorizontalScrollView>

            <Button
                android:id="@+id/buttonTVShows"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="@drawable/gradient"
                android:onClick="onClickToCatalog"
                android:text="@string/tv_shows"
                android:textColor="@android:color/background_light" />

            <HorizontalScrollView
                android:id="@+id/tvScroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient">

                <LinearLayout
                    android:id="@+id/tvShowLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"/>
            </HorizontalScrollView>

            <Button
                android:id="@+id/buttonBooks"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="@drawable/gradient"
                android:onClick="onClickToCatalog"
                android:text="@string/books"
                android:textColor="@android:color/background_light" />

            <HorizontalScrollView
                android:id="@+id/bookScroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient">

                <LinearLayout
                    android:id="@+id/bookLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"/>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/watchedBar"
        android:layout_width="300px"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu"/>

</android.support.v4.widget.DrawerLayout>
